# baize

./: .gitignore  API.md  API_APPLICATIONS.md  Cargo.toml  INTEGRATION_TEST_PLAN.md  MVP.md  REFACTOR.md  REQUIREMENTS.md  TEST_PLAN.md  V1_ROADMAP.md
crates/baize-asl/: Cargo.toml
crates/baize-asl/src/: adapter.rs  lib.rs  payload.rs  verify.rs
crates/baize-cli/: Cargo.toml
crates/baize-cli/src/: main.rs
crates/baize-core/: Cargo.toml
crates/baize-core/src/: approval.rs  cert.rs  constraint.rs  crypto.rs  error.rs  identity.rs  labels.rs  lib.rs  scope.rs  storage.rs  workspace.rs
crates/baize-middleware/: Cargo.toml
crates/baize-middleware/src/: client.rs  error.rs  http.rs  lib.rs  prelude.rs  types.rs
crates/baize-server/: Cargo.toml
crates/baize-server/src/: api.rs  hook.rs  lib.rs  pipeline.rs
crates/baize-server/src/pipeline/: agent_manager.rs  auditor.rs  auth.rs  data_ops.rs  elevation.rs  file_sync.rs  git_ops.rs  mod.rs  protocol.rs
crates/baize-server/src/pipeline/approval/: engine.rs  mod.rs  policy.rs  store.rs
crates/baize-server/src/pipeline/data_ops/: authz_ops.rs  intent_ops.rs  mod.rs  session_ops.rs
crates/baize-server/src/pipeline/identity/: cert_provider.rs  mod.rs
crates/baize-server/tests/: all_features_e2e.rs  all_features_security.rs  all_features_v0.rs  all_features_v1.rs  all_features_v2.rs  api_integration.rs  e2e_scenario.rs  pipeline_integration.rs  wave_integration.rs
crates/baize-server/tests/common/: mod.rs
tests/: e2e.sh
tests/agents/: baize_client.py  blob_inspect.py  cluster.py  mako_run.sh  mako_test.py  run.sh
zetu/: CRYPTO_SECURITY.md  MODULE_REFACOR.md  PROTOCOL_SPEC.md  PROTOCOL_SPEC_V1.md  PROTOCOL_VISION.md  V1_DEV.md  V1_ROADMAP.md  V1_STATUS.md  V2_DEV.md
