[workspace]
members = [
    "crates/baize-core",
    "crates/baize-server",
    "crates/baize-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# 存储
rusqlite = { version = "0.32", features = ["bundled"] }

# 证书
rcgen = { version = "0.13", features = ["x509-parser"] }
x509-parser = "0.16"

# SHA-256
sha2 = "0.10"
pem = "3"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# 错误处理
thiserror = "2"
anyhow = "1"

# 时间
chrono = "0.4"

# 测试
tempfile = "3"
