[package]
name = "baize-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { workspace = true }
rcgen = { workspace = true }
x509-parser = { workspace = true }
asn1-rs = "0.6"
sha2 = { workspace = true }
pem = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
x25519-dalek = { workspace = true }
hkdf = { workspace = true }
hex = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
