[package]
name = "baize-middleware"
version.workspace = true
edition.workspace = true
description = "Baize agent middleware — agent 架构的白泽集成接口"

[features]
default = []
http = ["reqwest"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
