[package]
name = "baize-server"
version.workspace = true
edition.workspace = true

[dependencies]
baize-core = { path = "../baize-core", features = ["internal-pipeline"] }
baize-asl = { path = "../baize-asl" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
git2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
pem = { workspace = true }
http-body-util = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
tower = "0.5"
http = "1"
http-body-util = "0.1"
